--- a/centos/Dockerfile
+++ b/centos/Dockerfile
@@ -19,7 +19,8 @@ VOLUME [ "/sys/fs/cgroup" ]
 # install extra repos
 RUN yum -y install epel-release; \
 rpm -Uvh http://rpms.famillecollet.com/enterprise/remi-release-7.rpm; \
-rpm -Uvh http://repo.nyancode.co.th/yum/el/6/x86_64/nyancode-release-1.0-1_final.noarch.rpm
+rpm -Uvh http://repo.nyancode.co.th/yum/el/6/x86_64/nyancode-release-1.0-1_final.noarch.rpm; \
+yum -y update; yum clean all
 
 # install extra tools
 # RUN yum -y install wget
@@ -27,4 +28,4 @@ rpm -Uvh http://repo.nyancode.co.th/yum/el/6/x86_64/nyancode-release-1.0-1_final
 CMD ["/usr/sbin/init"]
 
 # build and push command
-# docker build --rm -t iicmaster/centos .; docker push iicmaster/centos
+# docker build --rm -t iicmaster/centos . && docker push iicmaster/centos
