--- a/centos-phpfpm/Dockerfile
+++ b/centos-phpfpm/Dockerfile
@@ -24,17 +24,18 @@ yum clean all
 # add custom config
 COPY ./php/php.ini /etc/php.ini
 COPY ./php/www.conf /etc/php-fpm.d/www.conf
-COPY ./composer-install root/composer-install
+COPY ./composer-install /root/composer-install
 
 # create /tmp/lib/php
 RUN mkdir -p /tmp/lib/php/session; \
 mkdir -p /tmp/lib/php/wsdlcache; \
 mkdir -p /tmp/lib/php/opcache; \
 mkdir /root/.composer; \
-chmod 777 -R /tmp/lib/php
+chmod 777 -R /tmp/lib/php; \
+chmod 755 /root/composer-install
 
 # install Composer and plugins
-RUN root/composer-install && \
+RUN /root/composer-install && \
 composer global require 'hirak/prestissimo' && \
 composer global require 'phpmetrics/phpmetrics' && \
 composer global require 'phpunit/phpunit=5.5.*' && \
