[*] add zip & unzip

--- a/centos/Dockerfile
+++ b/centos/Dockerfile
@@ -4,14 +4,17 @@ MAINTAINER "iicmaster" <iicmaster@iicmaster.com>
 ENV container docker
 
 # install extra repos
-RUN yum -y install epel-release; \
-rpm -Uvh http://rpms.famillecollet.com/enterprise/remi-release-7.rpm; \
-rpm -Uvh http://repo.nyancode.co.th/yum/el/6/x86_64/nyancode-release-1.0-1_final.noarch.rpm; \
-yum -y update; \
+RUN yum -y install epel-release && \
+rpm -Uvh http://rpms.famillecollet.com/enterprise/remi-release-7.rpm && \
+rpm -Uvh http://repo.nyancode.co.th/yum/el/6/x86_64/nyancode-release-1.0-1_final.noarch.rpm && \
+yum -y update && \
 yum clean all
 
 # install extra tools
-RUN yum -y install wget git; \
+RUN yum -y install \
+wget \
+zip unzip \
+git && \
 yum clean all
 
 CMD ["/usr/sbin/init"]
