--- a/php/apache2/apache2.conf
+++ b/php/apache2/apache2.conf
@@ -51,7 +51,6 @@
 #   /etc/init.d/apache2 or apache2ctl. Calling /usr/bin/apache2 directly will not
 #   work with the default configuration.
 
-
 # Global configuration
 #
 
@@ -110,7 +109,6 @@ MaxKeepAliveRequests 100
 #
 KeepAliveTimeout 5
 
-
 # These need to be set in /etc/apache2/envvars
 User ${APACHE_RUN_USER}
 Group ${APACHE_RUN_GROUP}
@@ -149,7 +147,6 @@ IncludeOptional mods-enabled/*.conf
 # Include list of ports to listen on
 Include ports.conf
 
-
 # Sets the default security model of the Apache2 HTTPD server. It does
 # not allow access to the root filesystem outside of /usr/share and /var/www.
 # The former is used by web applications packaged in Debian,
@@ -157,20 +154,20 @@ Include ports.conf
 # your system is serving content from a sub-directory in /srv you must allow
 # access here, or in any related virtual host.
 <Directory />
-        Options FollowSymLinks
-        AllowOverride None
-        Require all denied
+	Options FollowSymLinks
+	AllowOverride None
+	Require all denied
 </Directory>
 
 <Directory /usr/share>
-        AllowOverride None
-        Require all granted
+	AllowOverride None
+	Require all granted
 </Directory>
 
 <Directory /var/www/>
-        Options Indexes FollowSymLinks
-        AllowOverride all
-        Require all granted
+	Options Indexes FollowSymLinks
+	AllowOverride all
+	Require all granted
 </Directory>
 
 #<Directory /srv/>
@@ -178,9 +175,6 @@ Include ports.conf
 #       AllowOverride None
 #       Require all granted
 #</Directory>
-
-
-
 
 # AccessFileName: The name of the file to look for in each directory
 # for additional configuration directives.  See also the AllowOverride
@@ -193,11 +187,9 @@ AccessFileName .htaccess
 # viewed by Web clients.
 #
 <FilesMatch "^\.ht">
-        Require all denied
+    Require all denied
 </FilesMatch>
 
-
-#
 # The following directives define some format nicknames for use with
 # a CustomLog directive.
 #
@@ -223,3 +215,6 @@ IncludeOptional conf-enabled/*.conf
 
 # Include the virtual host configurations:
 IncludeOptional sites-enabled/*.conf
+
+# Set the 'ServerName' directive globally to suppress warning message
+ServerName localhost
